fixing menu and wrap all in container

--- a/style.css
+++ b/style.css
@@ -19,6 +19,12 @@ body {
     background-image: url("./images/background_image.png");
 }
 
+.container {
+    max-width: 80rem;
+    padding-inline: .5rem;
+    margin-inline: auto;
+}
+
 .myNavbar {
     display: flex;
     justify-content: flex-end;
@@ -64,10 +70,6 @@ body {
     width: 100%; 
 }
 
-.myNavbar a:hover {
-    width: 100%;   
-}
-
 .myNavbar a:hover::after {
     width: 100%;
 }
@@ -109,7 +111,7 @@ body {
     font-size: 1rem;
     text-transform: capitalize;
     margin-top: 30px;
-    transition: all .4s ease;
+    transition: background-color .3s ease-in;
 }
 
 .cta i {
@@ -122,41 +124,43 @@ body {
 
 }
 
+.active-menu-item{
+    background-color: #716b94;
+    color: white;
+}
+
 .cta:hover i {
     transform: rotate(90deg);
+}
+
+.Work-menu {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 1rem;
 }
 
 .Work-menu li a {
     border-radius: 5px;
     text-decoration: none;
+    margin-inline: 1rem;
 }
 
 .Work-menu ul {
-    width: 50%;
+    display: flex;
     justify-content: space-around;
     list-style: none;
-    display: flex;
 }
 
-.Work-menu {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-
-}
 
 .title {
     color: #14044d;
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
-    text-align: center;
-    width: 100%;
-    height: 100px;
+    margin-top: 1rem;
 }
 
 /* ----underline----- */
@@ -178,13 +182,11 @@ body {
 }
 
 .column img {
-    position: relative;
     float: left;
     width: 400px;
     height: 250px;
-    padding: 5px;
+    margin: 5px;
     border-radius: 20px;
-    top: 119px;
 }
 
 /*about section*/
